package es.upm.game.tennis.model;

public class Player {

    private final int id;
    private final String name;

    public Player(int id, String name) {
        this.id = id;
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public int getId() {
        return id;
    }

//    public int getCurrentPoints() {
//        return currentPoints;
//    }
}